[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = []
[tool.poetry]
name = "calculate"
version = "0.1.0"
description = "A simple GUI calculator"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
tkinter = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
